@@ -3,7 +3,8 @@
 # Wed Feb 16 13:15:01 CET 2011
 
 CONFIG
-	#AgentRoot /usr/lib/ocf/resource.d/heartbeat
+	Agent LVM
+	AgentRoot /usr/lib/ocf/resource.d/heartbeat
 	HangTimeout 20
 
 VARIABLE
