@@ -36,17 +36,21 @@ ocft 通过两种手段来设计resouce agents的运行环境，一是更改reso
 语法：CONFIG
 此option中的设计是全局的，对每个test case都有所影响。
 
-2.1.1 'AgentRoot' 选项
+2.1.1 'Agent' 选项
+语法：Agent AGENT_NAME
+你要测试的Agent的名字。
+
+2.1.2 'AgentRoot' 选项
 语法：AgentRoot /usr/lib/ocf/resource.d/xxx
 一些agent将会被移到 "pacemaker" 或 "linbit" 目录，如果你定义了这个选项，ocft将会用它来
 替代默认的目录"heartbeat"。
 
-2.1.1 'InstallPackage' 选项
+2.1.3 'InstallPackage' 选项
 语法:InstallPackage package [package2 [...]]
 他会检测系统是否安装了此resource agent的service，如果没有安装，会自动从网络进行安装。
 package_name是某个resouce agent在操作系统中必须安装的包。
 
-2.1.2 'HangTimeout' 选项
+2.1.4 'HangTimeout' 选项
 语法：HangTimeout secs 
 如果你更改了一些很关键的东西，有些resouce agent会不知所措，停在那里不动，那么就会影响
 到后面test case的运行，所以你需要设定超时，如果一旦resouce agent停在那超时了，脚本会
