@@ -115,7 +115,8 @@ agent_run()
     sleep 3
     kill -SIGKILL -$pid >/dev/null 2>&1
     echo -n "${__OCFT__showhost}ERROR: The agent was hanging, killed it, "
-    echo "maybe you damaged the agent or system's environment."
+    echo "maybe you damaged the agent or system's environment, see details below:"
+    cat /tmp/.ocft_runlog
     echo
     quit 1
   fi
