@@ -12,7 +12,8 @@
 #       -o config_dir="/root/postfix/" /usr/lib/ocf/resource.d/heartbeat/postfix; echo $?
 
 CONFIG
-	#AgentRoot /usr/lib/ocf/resource.d/heartbeat
+	Agent postfix
+	AgentRoot /usr/lib/ocf/resource.d/heartbeat
 	InstallPackage postfix
 	HangTimeout 20
 
